erDiagram
  PROFILES ||--o{ USERS : has
  USERS ||--o{ PROJECTS : creates
  USERS ||--o{ PROJECT_MANAGERS : manages
  PROJECTS ||--o{ PROJECT_MANAGERS : has
  PROJECTS ||--o{ PROJECT_ACCESS_GROUPS : maps
  PROJECTS ||--o{ PROJECT_ACCESS_ROLES : maps
  PROJECTS ||--o{ FILES : contains
  FILES ||--o{ FILES : nests
  FILES ||--o{ FILE_SHARES : shares
  USERS ||--o{ FILE_SHARES : receives
  USERS ||--o{ ACTIVITY_LOGS : creates

  PROFILES { uuid id PK string name UK text description timestamptz created_at }
  USERS { uuid id PK string external_id UK string name UK string email uuid profile_id FK timestamptz created_at timestamptz updated_at }
  PROJECTS { uuid id PK string code UK string name string responsible_area string snow_task_number string parent_folder_name uuid created_by FK timestamptz created_at timestamptz updated_at }
  PROJECT_MANAGERS { uuid project_id PK_FK uuid user_id PK_FK }
  PROJECT_ACCESS_GROUPS { uuid id PK string provider string group_name string access_level }
  PROJECT_ACCESS_ROLES { uuid id PK string provider string role_name string access_level }
  FILES { uuid id PK uuid project_id FK uuid parent_id FK string kind string name bigint size_bytes string mime_type uuid created_by FK timestamptz last_viewed_at timestamptz created_at timestamptz updated_at }
  FILE_SHARES { uuid file_id PK_FK uuid user_id PK_FK string access_level uuid shared_by FK timestamptz created_at }
  ACTIVITY_LOGS { uuid id PK uuid user_id FK string action string entity string entity_id text details inet ip_address text user_agent timestamptz created_at }
